test/should-fail/jfxc3042.visage
/**
 * Regression test: JFXC-3042 : JavaFX script compiler fails with an exception
 *
 * @test/compile-error
 */

mixin class A {}

var x:A = if (true) {};
